[build-system]
requires = ["setuptools==62.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "provtoolutils_localcontainerreader"
description = "Reader for local provenance container"
version = "0.5.0"
authors = [
    { name = "Frank Dressel"}
]
dependencies = [
  "provtoolutils==0.16.4",
  "importlib-metadata==4.11.4"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/dlr-sp/provtool"

[project.optional-dependencies]
dev = [
  "tox"
]

[tool.setuptools]
packages = [ "localcontainerreader" ]

[project.entry-points]
"provtoolutils.reader" = { file= "localcontainerreader.reader" }
